make trigger start with type and prevent shift and tab increasing the index, add minor tailwind styling

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,3 +21,9 @@ body {
   background-color: black;
   padding: 50px;
 }
+ 
+#text-input:focus{
+  outline: none !important;
+ 
+}
+
